[gd_scene load_steps=31 format=2]

[ext_resource path="res://obj/Hitbox.gd" type="Script" id=1]
[ext_resource path="res://classes/Foe.gd" type="Script" id=2]
[ext_resource path="res://foes/Camera Shooter/sprites/plate@2x.png" type="Texture" id=3]
[ext_resource path="res://foes/Camera Shooter/CamShooterMovement.gd" type="Script" id=4]
[ext_resource path="res://shader/flash.gdshader" type="Shader" id=5]
[ext_resource path="res://foes/Camera Shooter/CameraShot.tscn" type="PackedScene" id=6]
[ext_resource path="res://foes/Camera Shooter/sprites/Bulb@2x.png" type="Texture" id=7]
[ext_resource path="res://foes/Camera Shooter/sprites/neck@2x.png" type="Texture" id=8]
[ext_resource path="res://foes/Camera Shooter/sprites/Gear_1@2x.png" type="Texture" id=9]
[ext_resource path="res://foes/Camera Shooter/sprites/screw@2x.png" type="Texture" id=10]
[ext_resource path="res://foes/Camera Shooter/sprites/base@2x.png" type="Texture" id=11]
[ext_resource path="res://foes/Camera Shooter/sprites/wheel@2x.png" type="Texture" id=12]
[ext_resource path="res://assets/2x/LightMask@2x.png" type="Texture" id=13]
[ext_resource path="res://assets/Circle.png" type="Texture" id=14]
[ext_resource path="res://obj/StartAnimation.gd" type="Script" id=15]
[ext_resource path="res://obj/RandomAudioStreamPlayer.gd" type="Script" id=16]
[ext_resource path="res://sounds/charge/Dynamite with sensor.ogg" type="AudioStream" id=17]
[ext_resource path="res://sounds/shoot/shoot.ogg" type="AudioStream" id=18]
[ext_resource path="res://sounds/shoot/shoot 2.ogg" type="AudioStream" id=19]
[ext_resource path="res://sounds/shoot/shoot 3.ogg" type="AudioStream" id=20]
[ext_resource path="res://foes/HitSFX.tscn" type="PackedScene" id=21]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_mod = 0.0

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 2

[sub_resource type="Animation" id=7]
resource_name = "Move"
length = 2.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Scew/Neck/Up/Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wheel2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wheel:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1.56917, 0.297302 ),
"update": 0,
"values": [ 35.7653, 41.7542 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base/Scew/Neck:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 0.5, 2.46229 ),
"update": 0,
"values": [ -48.7327, -43.3239 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base/Scew/Neck/Up/Gear:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Base/Scew/Neck/Up:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 48.7327 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Base/Scew/Neck/Up/Glow:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.137626, 0.137626 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Plate:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Prepare"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Scew/Neck/Up/Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wheel2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wheel:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 35.7653, 35.7653, 50.6078 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base/Scew/Neck:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -48.7327, -48.7327, -61.7255 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base/Scew/Neck/Up/Gear:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Base/Scew/Neck/Up:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.15, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 48.7327, 48.7327, 71.3096 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Base/Scew/Neck/Up/Glow:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 4.14106, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.137626, 0.137626 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Plate:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "audio"
tracks/9/path = NodePath("ChargeSFX")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 17 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Scew/Neck/Up/Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/Scew/Neck/Up/Glow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.137626, 0.137626 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base/Scew/Neck/Up/Glow:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wheel2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wheel:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 35.7653 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Base/Scew/Neck:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -48.7327 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Base/Scew/Neck/Up/Gear:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Base/Scew/Neck/Up:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 48.7327 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Plate:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Shoot"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Scew/Neck/Up/Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wheel2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wheel:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 4.92457, 1 ),
"update": 0,
"values": [ 47.4328, 41.8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base/Scew/Neck:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 4.92457, 1 ),
"update": 0,
"values": [ -24.741, -48.7 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base/Scew/Neck/Up/Gear:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Base/Scew/Neck/Up:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 4.92457, 1 ),
"update": 0,
"values": [ 78.6992, 48.7 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Base/Scew/Neck/Up/Glow:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Plate:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 4.92457, 1 ),
"update": 0,
"values": [ 8.83452, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.99997
height = 6.00005

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 689.5, 1 )

[node name="FoeCameraShooter" type="KinematicBody2D"]
material = SubResource( 3 )
script = ExtResource( 2 )
max_hp = 2
hit_squish = Vector2( 0.75, 1.25 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -20, 7 )
rotation = -1.57079
scale = Vector2( 0.5, 0.5 )

[node name="Base" type="Sprite" parent="Sprite"]
use_parent_material = true
position = Vector2( 14.9149, 38.0768 )
rotation = 0.624222
texture = ExtResource( 11 )
offset = Vector2( -0.0844631, -28.7246 )

[node name="Scew" type="Sprite" parent="Sprite/Base"]
use_parent_material = true
position = Vector2( 1.08447, -55.1018 )
rotation = -0.624222
texture = ExtResource( 10 )

[node name="Neck" type="Sprite" parent="Sprite/Base/Scew"]
use_parent_material = true
position = Vector2( 0, 3.8147e-06 )
rotation = -0.850546
z_index = -99
texture = ExtResource( 8 )
offset = Vector2( 0, -20 )

[node name="Up" type="Sprite" parent="Sprite/Base/Scew/Neck"]
use_parent_material = true
position = Vector2( -9.47853, -50.2211 )
rotation = 0.850546
offset = Vector2( -4, 32 )

[node name="Gear" type="Sprite" parent="Sprite/Base/Scew/Neck/Up"]
material = SubResource( 6 )
position = Vector2( -1.08752, -3.08751 )
texture = ExtResource( 9 )

[node name="Bulb" type="Sprite" parent="Sprite/Base/Scew/Neck/Up"]
use_parent_material = true
position = Vector2( -29.0875, 12.9125 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Sprite/Base/Scew/Neck/Up"]
position = Vector2( -29.0875, 12.9125 )
scale = Vector2( 0.306236, 0.306236 )
texture = ExtResource( 13 )
mode = 2

[node name="Glow" type="Sprite" parent="Sprite/Base/Scew/Neck/Up"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -28, 14 )
scale = Vector2( 0.137626, 0.137626 )
texture = ExtResource( 14 )

[node name="Plate" type="Sprite" parent="Sprite"]
use_parent_material = true
position = Vector2( 24, 36 )
texture = ExtResource( 3 )

[node name="Wheel" type="Sprite" parent="Sprite"]
use_parent_material = true
position = Vector2( 8, 48 )
texture = ExtResource( 12 )

[node name="Wheel2" type="Sprite" parent="Sprite"]
use_parent_material = true
position = Vector2( 40, 48 )
texture = ExtResource( 12 )

[node name="ChargeSFX" type="AudioStreamPlayer" parent="Sprite"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Move = SubResource( 7 )
anims/Prepare = SubResource( 10 )
anims/RESET = SubResource( 9 )
anims/Shoot = SubResource( 11 )
script = ExtResource( 15 )
play_which = "Move"

[node name="ShootPoint" type="Position2D" parent="Sprite"]
position = Vector2( -54.0001, -27.9999 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.0509804, 0, 0.215686, 1 )
position = Vector2( 3, 0 )
rotation = -3.14159
shape = SubResource( 1 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
use_parent_material = true
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -11, 0 )
shape = SubResource( 2 )

[node name="Flipbox" type="Area2D" parent="." groups=["FoeAreaException"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipbox"]
modulate = Color( 0.945098, 0, 1, 1 )
position = Vector2( -721.5, 0 )
shape = SubResource( 5 )

[node name="Movement" type="Node" parent="."]
script = ExtResource( 4 )
shot = ExtResource( 6 )
distance_from_point = 270

[node name="Unflash" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Shoot" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="PrepareToShoot" type="Timer" parent="."]
wait_time = 2.45
one_shot = true
autostart = true

[node name="HitSFX" parent="." instance=ExtResource( 21 )]

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
volume_db = -13.723
bus = "Shots"
script = ExtResource( 16 )
soundlist = [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ]

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="Movement" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Flipbox" to="Movement" method="_on_Flipbox_body_entered"]
[connection signal="timeout" from="Shoot" to="Movement" method="_on_Shoot_timeout"]
[connection signal="timeout" from="PrepareToShoot" to="Movement" method="_on_PrepareToShoot_timeout"]
